--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
     </head>
     <body>
-
+        <!-- Weather App title -->
         <div class="jumbotron jumbotron-fluid text-center p-3" style="background-color:#23272e ;color: rgb(255, 102, 0);">
             <h1> <strong>Weather App</strong></h1>
         </div>
+        <!-- Search bar and history -->
         <div class = "container">
             <div class="row">
                 <div class="searchArea col-sm-4 bg-dark">
@@ -34,10 +35,10 @@
 
                 </ul>
                     </div>
-
+                    <!-- Current forecast -->
                     <div class="todayForecast col-sm-8">
                         <div class="row ml-2 border border-dark rounded">
-                            <div class="forecastElem col-sm-12" id="currentWeather">
+                            <div class="forecastElem col-sm-12" style="color:rgb(255, 102, 0)" id="currentWeather">
                                 <h3 class="cityName mb-1 mt-2 bolder" id="currentCity"></h3>
                                 <p>Temperature: <span class="current" id="temperature"></span></p>
                                 <p>Wind Speed: <span class="current" id="windSpeed"></span></p>
@@ -46,8 +47,44 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Future 5 day forecast -->
 
-                    
+                    <div class="5-day col-sm-16" style="color:rgb(255, 102, 0)" id ="futureWeather">
+                        <h3>5 Day Forecast:</h3>
+                        <div class="row text-light">
+                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                                <p id="fDate0"></p>
+                                <p id="fImg0"></p>
+                                <p>Temperature:<span id="fTemp0"></span></p>
+                                <p>Humidity:<span id="fHumidity0"></span></p>
+                            </div>
+                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                                <p id="fDate1"></p>
+                                <p id="fImg1"></p>
+                                <p>Temperature:<span id="fTemp1"></span></p>
+                                <p>Humidity:<span id="fHumidity1"></span></p>
+                            </div>
+                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                                <p id="fDate2"></p>
+                                <p id="fImg2"></p>
+                                <p>Temperature:<span id="fTemp2"></span></p>
+                                <p>Humidity:<span id="fHumidity2"></span></p>
+                            </div>
+                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                                <p id="fDate3"></p>
+                                <p id="fImg3"></p>
+                                <p>Temperature:<span id="fTemp3"></span></p>
+                                <p>Humidity:<span id="fHumidity3"></span></p>
+                            </div>
+                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                                <p id="fDate4"></p>
+                                <p id="fImg4"></p>
+                                <p>Temperature:<span id="fTemp4"></span></p>
+                                <p>Humidity:<span id="fHumidity4"></span></p>
+                            </div>
+                        </div>
+                    </div>
+
 
                 </div>
             </div>
