add some styling and minor html changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- bootstrap -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+        <!-- css style -->
         <link rel="stylesheet" href="assets\css\style.css">
 
         <title>Weather App</title>
@@ -52,31 +52,31 @@
                     <div class="5-day col-sm-16" style="color:rgb(255, 102, 0)" id ="futureWeather">
                         <h3>5 Day Forecast:</h3>
                         <div class="row text-light">
-                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                            <div class="ftrDay col-sm-2 bg-primary text-white ml-2 mb-3 p-2 mt-2 rounded" >
                                 <p id="fDate0"></p>
                                 <p id="fImg0"></p>
                                 <p>Temperature:<span id="fTemp0"></span></p>
                                 <p>Humidity:<span id="fHumidity0"></span></p>
                             </div>
-                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                            <div class="ftrDay col-sm-2 bg-primary text-white ml-2 mb-3 p-2 mt-2 rounded" >
                                 <p id="fDate1"></p>
                                 <p id="fImg1"></p>
                                 <p>Temperature:<span id="fTemp1"></span></p>
                                 <p>Humidity:<span id="fHumidity1"></span></p>
                             </div>
-                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <div class="ftrDay col-sm-2 bg-primary text-white ml-2 mb-3 p-2 mt-2 rounded">
                                 <p id="fDate2"></p>
                                 <p id="fImg2"></p>
                                 <p>Temperature:<span id="fTemp2"></span></p>
                                 <p>Humidity:<span id="fHumidity2"></span></p>
                             </div>
-                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <div class="ftrDay col-sm-2 bg-primary text-white ml-2 mb-3 p-2 mt-2 rounded">
                                 <p id="fDate3"></p>
                                 <p id="fImg3"></p>
                                 <p>Temperature:<span id="fTemp3"></span></p>
                                 <p>Humidity:<span id="fHumidity3"></span></p>
                             </div>
-                            <div class="ftrDay col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                            <div class="ftrDay col-sm-2 bg-primary text-white ml-2 mb-3 p-2 mt-2 rounded" >
                                 <p id="fDate4"></p>
                                 <p id="fImg4"></p>
                                 <p>Temperature:<span id="fTemp4"></span></p>
@@ -91,7 +91,10 @@
 
 
         </div>
-
+        <!-- jquery and ajax scrypt -->
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+        <!-- js scrypt -->
         <script src="assets\js\scrypt.js"></script>
 
     </body>
