console error fix

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <h4 class="srchCity" style="color:rgb(255, 102, 0)"><strong>Search City:</strong></h4>
 
                     <div class="searchBar mb-3">
-                        <input type="text" class="form" id="searchCity" placeholder="City name" aria-describedby="searchButton">
+                        <input type="text" class="form-control" id="searchCity" placeholder="City name" aria-describedby="searchButton">
                         <div>
-                            <button class="button bg-dark text-light" id="srchButton"><i class="fa fa-search"></i></button>
+                            <button class="button bg-dark text-light" id="searchButton"><i class="fa fa-search"></i></button>
                         </div>
 
                         <button class="clear btn btn-dark" type="button" id="clearHistory">Clear</button>
